[gd_scene load_steps=11 format=2]

[ext_resource path="res://GroundBloc.gd" type="Script" id=1]
[ext_resource path="res://cube1.png" type="Texture" id=2]
[ext_resource path="res://cube1_normal.png" type="Texture" id=3]
[ext_resource path="res://cursor.png" type="Texture" id=4]
[ext_resource path="res://greenOverlay.png" type="Texture" id=5]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 1, 1, 1 )

[sub_resource type="SpatialMaterial" id=2]
params_diffuse_mode = 3
params_specular_mode = 4
albedo_texture = ExtResource( 2 )
normal_enabled = true
normal_scale = 1.0
normal_texture = ExtResource( 3 )

[sub_resource type="QuadMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
flags_unshaded = true
albedo_texture = ExtResource( 4 )

[sub_resource type="SpatialMaterial" id=5]
flags_unshaded = true
params_blend_mode = 1
albedo_texture = ExtResource( 5 )

[node name="GroundBloc" type="Spatial"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Cube" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Overlay" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, 1, 0, -1, -4.37114e-008, 0, 0.001, 0 )
visible = false
mesh = SubResource( 3 )
material/0 = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="OverUnderlay" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, 1, 0, -1, -4.37114e-008, 0, 0.001, 0 )
visible = false
mesh = SubResource( 3 )
material/0 = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Area" type="Area" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon" type="CollisionPolygon" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1.19249e-008, 1, 0, -1, 1.19249e-008, 0, 0, 0 )
depth = 0.01
polygon = PoolVector2Array( 0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="input_event" from="Area" to="." method="_on_Area_input_event"]
[connection signal="mouse_entered" from="Area" to="." method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Area" to="." method="_on_Area_mouse_exited"]
